--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="note_title">Note Title</string>
     <string name="note_text">Note Text</string>
     <string name="title_activity_note">Edit Note</string>
+    <string name="send_as_email">Send as email</string>
 </resources>
